force-app/main/default/objects/Directive_Action_Definition__mdt/Directive_Action_Definition__mdt.object-meta.xml
<CustomObject>
    <label>Directive Action Definition</label>
    <pluralLabel>Directive Action Definitions</pluralLabel>
</CustomObject>