force-app/main/default/objects/Directive_Action_Definition__mdt/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <label>Approval Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>