force-app/main/default/objects/Directive_Action_Definition__mdt/fields/Confirmation_Required__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Required__c</fullName>
    <label>Confirmation Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>