force-app/main/default/objects/Directive_Action_Definition__mdt/fields/Idempotent__c.field-meta.xml
<CustomField>
    <fullName>Idempotent__c</fullName>
    <label>Idempotent</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>