force-app/main/default/objects/Directive_Action_Definition__mdt/fields/Implementation_Name__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Name__c</fullName>
    <label>Implementation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>