force-app/main/default/objects/Directive_Action_Definition__mdt/fields/Implementation_Type__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Type__c</fullName>
    <label>Implementation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>GraphQL</fullName><default>false</default><label>GraphQL</label></value>
            <value><fullName>Flow</fullName><default>false</default><label>Flow</label></value>
            <value><fullName>Apex</fullName><default>false</default><label>Apex</label></value>
            <value><fullName>External</fullName><default>false</default><label>External</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>