force-app/main/default/objects/Directive_Action_Definition__mdt/fields/Supported_Object__c.field-meta.xml
<CustomField>
    <fullName>Supported_Object__c</fullName>
    <label>Supported Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>